@@ -30,7 +30,7 @@ class ClientTest < TinyTds::TestCase
         assert_equal 'DBTDS_5_0 - 5.0 SQL Server', @client.tds_version_info
       else
         assert_equal 9, @client.tds_version
-        assert_equal 'DBTDS_7_1 - Microsoft SQL Server 2000', @client.tds_version_info
+        assert_equal 'DBTDS_7_1/DBTDS_8_0 - Microsoft SQL Server 2000', @client.tds_version_info
       end
     end
     
